# Tiny-Anomaly-by-Synthesis

./: README.md  pyproject.toml
baseline/: gmm.ipynb  gmm.py  knn.ipynb  knn.py  nf.py  run_baseline.py  run_knn.py  sam.py  vis_new.py  visualization.py
cloud/: files.json
datasets/clevr/: clevr_stats.py  downample.ipynb  make_ood_color_dataset.py  train_samples.ipynb
datasets/rugd/: make_ddpm_train_set_rugd_full.py  make_ddpm_train_set_rugd_trail_trail_15.py  rugd_trail_15_no_building.txt  rugd_trail_no_vehicle.txt
diffunc/: all.py  anneal_samplers.py  conditioner.py  constraints.py  ed.py  guided_diffusion.py  pipeline.py  sam.py  softrect.py  unit_distributions.py  utils.py  vector_bank.py  viz.py
diffunc/train/: clevr_ood_color_train.py  rugd_full_id_train.py  rugd_trail.py  rugd_trail_15.py  uniform_random_dataset.py  uniform_random_trainer.py
diffunc/train/cityscapes/: cityscapes_128px.py  cityscapes_128px.sh  cityscapes_256px.py  cityscapes_256px.sh
diffunc/train/diffusers/: sample.py  train.py  train.sh
diffunc/train/satellite/: satellite_128px.py  satellite_128px.sh  satellite_64px.py  satellite_64px.sh
experiment/: eval.py  eval_way.py  freq_count.py  freq_label.py  gt_conn_comp.py  instance_segment.py  l2p.py  object_metric.py  pipe.py  pipe_way.py  quantizer.py
jupyviz/: __init__.py
