[project]
name = "diffunc"
version = "1.0.0"
description = ""
authors = [
    {name = "Siddharth Ancha", email = "sancha@mit.edu"},
]
dependencies = [
    # =========================================================================
    # Debugging, interactive Python and Jupyter notebooks
    # =========================================================================
    "ipdb>=0.13.13",
    "ipykernel>=6.25.2",
    "ipywidgets>=8.1.1",
    "pyreadline3>=3.4.1",
    "tqdm>=4.66.1",
    "jupyterlab>=4.0.9",

    # =========================================================================
    # Main dependencies
    # =========================================================================
    "prettytable>=3.9.0",
    "scikit-learn>=1.3.2",
    "wandb>=0.15.12",
    "matplotlib>=3.7.3",
    "opencv-python>=4.8.1.78",
    "termcolor>=2.3.0",
    "mediapy>=1.1.9",
    "pytest>=7.4.3",
    "gdown>=4.7.1",

    # =========================================================================
    # PyTorch (https://pytorch.org/)
    # =========================================================================
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # =========================================================================
    # DDPM repo -- siddancha's fork from the original lucidrains repo
    # =========================================================================
    "denoising-diffusion-pytorch @ git+https://github.com/siddancha/denoising-diffusion-pytorch.git@main",
    
    # =========================================================================
    # Segment-Anything from Meta
    # =========================================================================
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    
    # =========================================================================
    # Diffusers from Hugging Face
    # =========================================================================
    # https://huggingface.co/docs/diffusers/installation#install-with-pip
    # "diffusers[torch]>=0.26.1",
    # "transformers>=4.37.2",
    # "accelerate>=0.26.1",
    # "datasets>=2.16.1",

    # =========================================================================
    # FeatUP and its dependencies
    # =========================================================================
    "featup @ git+https://github.com/mhamilton723/FeatUp",
    "clip @ git+https://github.com/mhamilton723/CLIP.git",
    "xformers>=0.0.25.post1",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
